retrieveAllStudio 반환값 unmodifiable list 로 변경